--- a/Newfile/宜倫姐的技術支援/mywebsite.html
+++ b/Newfile/宜倫姐的技術支援/mywebsite.html
@@ -157,30 +157,17 @@
             </p>
             <img  class="adjust-title" src="./images/skillStree.jpg">
             <p>
-            <div class="media sub-visual sub-cont">
+            <div class="media sub-visual sub-cont adjust-title-img">
               <img src="./images/ＢＭＩ.png" class="adjust">
               <div class="media-body">
-                <p style="text-align: right;margin-left: 50px;" class="sub-cont">
+                <p class="sub-cont text">
                   BMI測量<br>
-                  點擊就可前往，這是在職訓局中<br>
-                  學到的第一個程式<br>
-       
+                  這是在職訓局中，製作的第一個小型工具，雖然設計上並不是太好，但讓我理解了，防呆機制設計的原理，也算是第一次實際製作出，具有實用性的小型工具。
                   <hr>
                 </p>
               </div>
             </div>
             </p>
-            <div class="media sub-visual sub-cont">
-              <div class="media-body">
-                <p class="sub-cont">
-                 在職訓局中，正式踏上學習的道路<br>
-                  懸粱刺骨，提醒自己絕對不能失敗<br>
-                  最終，取得第二名家績<br>
-                  <hr>
-                </p>
-              </div>
-              <img src="./images/subvisual03.jpg" class="ml-3">
-            </div>
           </div>
         </div>
       </div>
@@ -194,7 +181,7 @@
         <h1 class="display-4">誠峻簡歷</h1>
         <p class="lead">準前端工程師</p>
         <p class="sub-cont">畢業於：國立澎湖科技大學行銷與物流管理系</p>
-        <p class="sub-cont">學習程式：約半年，但憑藉興趣，已能建立網頁</p>
+        <p class="sub-cont">學習程式：約半年，但憑藉興趣，已能建立小型遊戲</p>
         <p class="sub-cont">熟悉工具：html,css,JS,github</p>
         <p class="sub-cont">略懂工具：php,MySql,bootstrap</p>
       </div>
